--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,7 @@
 .coveralls.yml   export-ignore
 .scrutinizer.yml export-ignore
 .styleci.yml     export-ignore
+humbug.json.dist export-ignore
 README.md        export-ignore
 CONTRIBUTING.md  export-ignore
 phpunit.xml      export-ignore
