--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^1.0",
     "humbug/humbug": "~1.0@dev",
+    "league/csv": "^8.0",
     "phpmd/phpmd": "^2.0",
     "phpunit/phpunit": "^4.5|^5.0",
     "sebastian/phpcpd": "^2.0",
@@ -38,6 +39,7 @@
     "zendframework/zend-diactoros": "^1.0"
   },
   "suggest": {
+    "league/csv": "Used by CSV decoder"
   },
   "autoload": {
     "psr-4": {
